--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^2.47.0",
     "gsap": "^3.12.5",
     "lucide-react": "^0.317.0",
     "next": "14.1.0",
