--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@tabler/icons-react": "^2.47.0",
+    "dotenv": "^16.4.4",
+    "firebase": "^10.6.0",
     "gsap": "^3.12.5",
     "lucide-react": "^0.317.0",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "sharp": "^0.33.2"
+    "react-hook-form": "^7.50.1",
+    "sharp": "^0.33.2",
+    "yup": "^1.3.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
